# Diablo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: __init__.py  __main__.py  config.py  server.py
backend/core/: __init__.py  ai_provider.py  function_analyzer.py  smart_search.py  solodit_client.py
backend/modules/: __init__.py  dictionary.py  learning.py  scout.py
backend/prompts/: lesson_template.md  personality.md  pitfall_template.md  scout_template.md
backend/tests/: test_learning_module.py  test_scout_rendering.py
diablo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
extension/: .vscodeignore  CHANGELOG.md  package-lock.json  package.json
extension/src/: extension.ts
extension/src/panels/: AcademyPanel.ts  DictionaryPanel.ts  FindingDetailPanel.ts  LessonPanel.ts  ReportPanel.ts  ScoutPanel.ts
extension/src/utils/: webview.ts
scripts/: install-extension.sh  install-local.sh
